tests/snapshots/in_memory_provider__error_reporting_graph_compression_simple.snap
---
source: tests/in_memory_provider.rs
expression: user_friendly_error(&err)
---
The following packages are incompatible
|-- B 100..999 will be installed;
|-- A 0..99 cannot be installed because:
    |-- A 9 | 10 would require
        |-- B 0..99, which conflicts with the already selected version.

