tests/snapshots/in_memory_provider__error_reporting_missing.snap
---
source: tests/in_memory_provider.rs
expression: error
---
The following packages are incompatible
|-- A 41..42 is installable;
|-- No candidates where found for B 14..15.

