tests/snapshots/in_memory_provider__error_reporting_missing_1.snap
---
source: tests/in_memory_provider.rs
expression: error
---
The following packages are incompatible
|-- A 41..42 will be installed;
|-- No candidates where found for B 14..15.

