tests/snapshots/in_memory_provider__error_reporting_root_conflict.snap
---
source: tests/in_memory_provider.rs
expression: error
---
The following packages are incompatible
|-- A 0..4 will be installed;
|-- A 5..10 cannot be installed, because it conflicts with the versions reported above.

